# ScanningApp

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/seniordesign/scanningapp/: AugmentedRealityActivity.java  AugmentedRealityRenderer.java  FileActivity.java  FileAdapter.java  GestureDetector.java  JNINative.java  MarkerInfo.java  Route.java  RouteActivity.java  RouteAdapter.java  TangoInitializationHelper.java  TangoJNINative.java  VerticalSeekBar.java  ViewerActivity.java  ViewerRenderer.java  Wall.java  WallActivity.java  WallAdapter.java
app/src/main/jni/: Android.mk  augmented_reality_app.cc  augmented_reality_scene.cc  jni_interface.cc  mask_processor.cc  model_io.cc  scene.cc  texture_processor.cc  vertex_processor.cc  viewer_app.cc  viewer_scene.cc
app/src/main/jni/tango-augmented-reality/: augmented_reality_app.h  augmented_reality_scene.h  mask_processor.h  model_io.h  scene.h  texture_processor.h  vertex_processor.h  viewer_app.h  viewer_scene.h
app/src/main/res/layout/: activity_files.xml  activity_routes.xml  activity_viewer.xml  activity_viewer_content.xml  activity_walls.xml  dialog_edit_marker.xml  dialog_edit_route.xml  dialog_info.xml  dialog_new_wall.xml  dialog_show_marker.xml  file_list_item.xml  route_list_item.xml  wall_list_item.xml
app/src/main/res/values/: colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
tango_gl/: camera.cc  shaders.cc  tango_gl.cc
tango_gl/include/tango-gl/: camera.h  shaders.h
